crates/wamex-cli/tests/snapshots/snapshot__static_str.wasm - exports.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", exports)"
---
{
    "__wamex___wasm_split_00static_str00_export_63192d43e382025060e502134cbbee6a_static_str",
}
