crates/wamex-cli/tests/snapshots/snapshot__static_str.wasm - imports.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", imports)"
---
{
    "__indirect_function_table",
    "__lib_base",
    "__stack_pointer",
    "__static_str_string_build_with_shared_const_lib_base",
    "__static_str_string_build_with_shared_const_table_base",
    "__table_base",
    "__wamex__ZN8dlmalloc8dlmalloc17Dlmalloc$LT$A$GT$6malloc17h2de685e1ffc8fe2eE",
    "memory",
}
