crates/wamex-cli/tests/snapshots/snapshot__static_str_string_build_with_shared_const.wasm - imports.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", imports)"
---
{
    "__indirect_function_table",
    "__lib_base",
    "__stack_pointer",
    "__table_base",
    "memory",
}
