crates/wamex-cli/tests/snapshots/snapshot__string_build_with_shared_const.wasm - data_segments.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", data_segments)"
---
[
    "6869",
    "",
    "",
]
