crates/wamex-cli/tests/snapshots/snapshot__string_build_with_shared_const_static_str.wasm - data_segments.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", data_segments)"
---
[
    "5355504552205354415449432053484152454420535452494e47",
    "",
    "",
]
