crates/wamex-cli/tests/snapshots/snapshot__string_from_static.wasm - data_segments.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", data_segments)"
---
[
    "4f544845522053544154494320535452494e47736f6d655f74657374",
    "",
    "",
]
