crates/wamex-cli/tests/snapshots/snapshot__string_from_static.wasm - imports.snap
---
source: crates/wamex-cli/tests/snapshot.rs
expression: "format!(\"{:#?}\", imports)"
---
{
    "__indirect_function_table",
    "__lib_base",
    "__stack_pointer",
    "__table_base",
    "__wamex__ZN132_$LT$alloc..vec..Vec$LT$T$C$A$GT$$u20$as$u20$alloc..vec..spec_extend..SpecExtend$LT$$RF$T$C$core..slice..iter..Iter$LT$T$GT$$GT$$GT$11spec_extend17h5422ffb3245210a3E",
    "__wamex__ZN5alloc7raw_vec12handle_error17h3d3f256ad1600b52E",
    "__wamex__ZN8dlmalloc8dlmalloc17Dlmalloc$LT$A$GT$6malloc17h2de685e1ffc8fe2eE",
    "memory",
}
